           Renamed CHART_OBJECT_SELL plugin to SELL
           Renamed CHART_OBJECT_TEXT plugin to TEXT
           Renamed CHART_OBJECT_TLINE plugin to TLINE
           Renamed CHART_OBJECT_VLINE plugin to VLINE

           Now able to add chart objects to indicators using the indicator editing dialog. Add them just
           as you would indicator functions. Use them to add reference lines etc.

20110404:  Moved the chart object code from /src to the plugin code.

20110405:  Moved plot code into lib so that plugins can use it.

           Moved plot style code into plugins for plot.

           Histogram Bar line style was changed to HistogramBar. CVS users will have to edit any indicators using
           Histogram Bar style. Just reset the line type and save the indicator and it will work again.
           Same with any scripts.

           Merged all the GROUP_DATABASE* plugins into GROUP_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the SCRIPT_DATABASE* plugins into SCRIPT_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the QUOTE_DATABASE* plugins into QUOTE_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the INDICATOR_PLOT* plugins into INDICATOR plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Removed indicator scripts that are duplicated by the plugins.

           Merged all the INDICATOR_DATABASE* plugins into INDICATOR_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the PLOT_* plugins into PLOT plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the SETTINGS_* plugins into SETTINGS plugin. CVS users please update your
           personal scripts with the METHOD parm.