@@ -63,6 +63,6 @@ foreach $file (@files)
 }
 
 # refresh qtstalker chart panel
-$command = "PLUGIN=CHART_PANEL_REFRESH";
+$command = "PLUGIN=CONTROL_PANEL,METHOD=CHART_REFRESH";
 print STDOUT $command;
 $rc = <STDIN>; chomp($rc); if ($rc eq "ERROR") { print STDERR $command; exit; }
