@@ -1,7 +1,0 @@
-!include( ../../../script.plugin.config ){
-  message( "Oops -- No custom build options specified" )
-}
-
-HEADERS += CHART_PANEL_REFRESH.h
-
-SOURCES += CHART_PANEL_REFRESH.cpp
