@@ -1,7 +1,0 @@
-!include( ../../../script.plugin.config ){
-  message( "Oops -- No custom build options specified" )
-}
-
-HEADERS += SCRIPT_PANEL_RUN.h
-
-SOURCES += SCRIPT_PANEL_RUN.cpp
