@@ -128,9 +128,9 @@ SUBDIRS += plugins/script/Candle
 SUBDIRS += plugins/script/CANDLES
 SUBDIRS += plugins/script/CANDLE_PATTERN
 SUBDIRS += plugins/script/CCI
-SUBDIRS += plugins/script/CHART_PANEL_REFRESH
 SUBDIRS += plugins/script/CMO
 SUBDIRS += plugins/script/CONFIRM_DIALOG
+SUBDIRS += plugins/script/CONTROL_PANEL
 SUBDIRS += plugins/script/COPY_ARRAY
 SUBDIRS += plugins/script/CORREL
 SUBDIRS += plugins/script/CUS
@@ -143,7 +143,6 @@ SUBDIRS += plugins/script/FI
 SUBDIRS += plugins/script/FILE_DIALOG
 SUBDIRS += plugins/script/GROUP_DATABASE
 SUBDIRS += plugins/script/GROUP_EDIT_DIALOG
-SUBDIRS += plugins/script/GROUP_PANEL_REFRESH
 SUBDIRS += plugins/script/Histogram
 SUBDIRS += plugins/script/HistogramBar
 SUBDIRS += plugins/script/HLINE
@@ -183,7 +182,6 @@ SUBDIRS += plugins/script/SAR
 SUBDIRS += plugins/script/SCRIPT_DATABASE
 SUBDIRS += plugins/script/SCRIPT_EDIT_DIALOG
 SUBDIRS += plugins/script/SCRIPT_NAME
-SUBDIRS += plugins/script/SCRIPT_PANEL_RUN
 SUBDIRS += plugins/script/SCRIPT_RETURN_DATA
 SUBDIRS += plugins/script/SELECT_DIALOG
 SUBDIRS += plugins/script/SELL
